# intuit-cdc

./: .env.example  Makefile  README.md  file.txt  meltano.yml  properties.json  pyproject.toml  track_time.txt
src/intuit_cdc/: __init__.py  config.py  main.ipynb
