[project]
name = "intuit-cdc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jackson_Yang", email = "yzhuox721@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "intuit-oauth>=1.2.6",
    "jupyter>=1.1.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-quickbooks>=0.9.11",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
]

[project.scripts]
intuit-cdc = "intuit_cdc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
